--- a/package.json
+++ b/package.json
@@ -13,51 +13,52 @@
     "clean": "rimraf dist",
     "generate:prisma": "prisma generate",
     "generate:nexus": "ts-node --transpile-only ./src/schema",
-    "db:save": "yarn prisma migrate dev --create-only --preview-feature",
-    "db:migrate": "yarn prisma migrate dev --preview-feature",
-    "db:migrate:prod": "yarn prisma migrate deploy --preview-feature",
-    "prisma": "dotenv -- prisma"
+    "prisma": "dotenv -- prisma",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "apollo-server": "2.19.2",
-    "bcrypt": "5.0.0",
-    "dotenv": "8.2.0",
-    "graphql-middleware": "6.0.1",
+    "apollo-server": "3.6.2",
+    "bcrypt": "5.0.1",
+    "dotenv": "14.2.0",
+    "graphql": "^15.8.0",
+    "graphql-middleware": "6.1.13",
     "graphql-shield": "7.5.0",
+    "graphql-subscriptions": "^2.0.0",
     "jsonwebtoken": "8.5.1",
-    "nexus": "1.0.0",
-    "nexus-plugin-prisma": "0.28.0"
+    "nexus": "1.1.0",
+    "nexus-plugin-prisma": "0.35.0"
   },
   "devDependencies": {
     "@prisma/cli": "2.14.0",
-    "@prisma/client": "2.14.0",
-    "@types/bcrypt": "3.0.0",
+    "@prisma/client": "^3.8.1",
+    "@types/bcrypt": "5.0.0",
     "@types/dotenv": "8.2.0",
-    "@types/eslint": "7.2.6",
-    "@types/jest": "26.0.20",
-    "@types/jsonwebtoken": "8.5.0",
-    "@types/node": "14.14.21",
-    "@types/prettier": "2.1.6",
-    "@types/rimraf": "3.0.0",
-    "@typescript-eslint/eslint-plugin": "4.13.0",
-    "@typescript-eslint/parser": "4.13.0",
+    "@types/eslint": "8.4.1",
+    "@types/jest": "27.4.0",
+    "@types/jsonwebtoken": "8.5.8",
+    "@types/node": "^17.0.10",
+    "@types/prettier": "2.4.3",
+    "@types/rimraf": "3.0.2",
+    "@typescript-eslint/eslint-plugin": "5.10.0",
+    "@typescript-eslint/parser": "5.10.0",
     "cross-env": "7.0.3",
-    "dotenv-cli": "4.0.0",
-    "eslint": "7.18.0",
-    "eslint-config-prettier": "7.1.0",
-    "graphql-request": "3.3.0",
-    "husky": "4.3.8",
-    "jest": "26.6.3",
-    "jest-environment-node": "26.6.2",
-    "lint-staged": "10.5.3",
-    "nanoid": "3.1.20",
+    "dotenv-cli": "4.1.1",
+    "eslint": "8.7.0",
+    "eslint-config-prettier": "8.3.0",
+    "graphql-request": "3.7.0",
+    "husky": "^7.0.0",
+    "jest": "27.4.7",
+    "jest-environment-node": "27.4.6",
+    "lint-staged": "12.3.0",
+    "nanoid": "3.2.0",
     "npm-run-all": "4.1.5",
-    "prettier": "2.2.1",
+    "prettier": "2.5.1",
+    "prisma": "^3.8.1",
     "rimraf": "3.0.2",
-    "ts-jest": "26.4.4",
-    "ts-node": "9.1.1",
-    "ts-node-dev": "1.1.1",
-    "typescript": "4.1.3",
+    "ts-jest": "27.1.3",
+    "ts-node": "10.4.0",
+    "ts-node-dev": "1.1.8",
+    "typescript": "4.5.5",
     "typesync": "0.8.0"
   },
   "prettier": {
